# TaskHive

./: CMakeLists.txt  CMakeLists_thread_pool.txt  DevLog.md  Logtheissue.md  README.md  TEST_README.md  VALIDATION_REPORT.md  kill_all.sh  test_cron_parser  thread_pool.cpp  thread_pool.h  thread_pool_demo.cpp
config/: client_config.json  scheduler_config.json  worker_config.json
examples/: load_balancer_demo
include/: client.h  client_config.h  config_base.h  load_balancer.h  message_queue.h  redis_client.h  scheduler.h  scheduler_config.h  threadpool.h  worker.h  worker_config.h  worker_mq.h  zk_client.h
log_system/: AsyncBuffer.hpp  AsyncLogger.hpp  AsyncWorker.hpp  CliBackupLog.hpp  LogFlush.hpp  LogLevel.hpp  Logger.hpp  Manager.hpp  Message.hpp  ServerBackupLog.cpp  ServerBackupLog.hpp  Threadpool.hpp  Util.hpp  config.conf  test_threadpool.cpp
log_system/logtest/: test.cpp
proto/: task.pb.cc  task.pb.h  task.proto
src/: client.cpp  client_main.cpp  function_lib.cpp  load_balancer.cpp  redis_client.cpp  scheduler.cpp  scheduler_main.cpp  threadpool.cpp  worker.cpp  worker_main.cpp  zk_client.cpp
test/: performance_test.cpp  simple_performance_test.cpp  test_message_queue.cpp  test_redis.cpp  test_threadpool.cpp  test_weighted_load_balance.cpp  test_zkclient.cpp
thread_pool_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
